# 3d-renderer-cpp

./: .clang-format  .clang-tidy  .gitignore  3DRenderer.js  3DRenderer.wasm  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  index.html
.github/workflows/: main.yml
assets/shaders/: model.frag.glsl  model.vert.glsl  model_gl3.frag.glsl  model_gl3.vert.glsl  model_gl4.vert.glsl  model_gles3.frag.glsl  model_gles3.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  skybox_gl3.frag.glsl  skybox_gl3.vert.glsl  skybox_gles3.frag.glsl
assets/shaders/glsl/: classic_ads.glsli  gouraud.frag.glsl  gouraud.vert.glsl  model.frag.glsl  model.vert.glsl  model_gl4.frag.glsl  model_gl4.vert.glsl  phong.frag.glsl  phong.vert.glsl  phong_model.frag.glsl  skybox.frag.glsl  skybox.vert.glsl  skybox_gl4.frag.glsl  skybox_gl4.vert.glsl
assets/shaders/hlsl/: classic_ads.hlsli  gouraud.hlsl  model.hlsli  model.pixel.hlsl  model.ps.hlsl  model.vert.hlsl  model.vs.hlsl  mvp.hlsli  phong.hlsl  skybox.hlsl  skybox.pixel.hlsl  skybox.ps.hlsl  skybox.vert.hlsl  skybox.vs.hlsl
src/: CMakeLists.txt  app.cpp  app.h  app.hpp  camera.cpp  camera.h  camera.hpp  defs.hpp  drawproperties.cpp  drawproperties.h  drawproperties.hpp  glfw_window.cpp  glfw_window.hpp  globals.cpp  globals.hpp  gui.cpp  gui.h  gui.hpp  logger.hpp  main.cpp  meshimporter.cpp  meshimporter.hpp  model.cpp  model.h  model.hpp  modelimporter.cpp  modelimporter.hpp  pch.hpp  renderer.cpp  renderer.h  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.h  shader.hpp  shell_minimal.html  skybox.cpp  skybox.h  skybox.hpp  (+7 more)
src/direct3d12/: d3d12_model.cpp  d3d12_model.hpp  d3d12_renderer.cpp  d3d12_renderer.hpp  d3d12_shader.cpp  d3d12_shader.hpp  d3d12_skybox.cpp  d3d12_skybox.hpp
src/gl/: gl_model.cpp  gl_model.hpp  gl_renderer.cpp  gl_renderer.hpp  gl_shader.cpp  gl_shader.hpp  gl_skybox.cpp  gl_skybox.hpp  wgl_context.cpp  wgl_context.hpp
src/win32/: gameinput_system.cpp  gameinput_system.hpp  rawinput_system.cpp  rawinput_system.hpp  win32_inpututils.hpp  win32_window.cpp  win32_window.hpp
